# PythonProject

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  uv.toml
app/: config.py  server.py
app/agent/: __init__.py  field_extractor.py  langchain_agent.py  local_memory.py  memory.py  responder.py  tools.py  trace.py
app/api/: right_routes.py  right_routes_v2.py  right_routes_v3.py  right_routes_v4.py  right_routes_v5.py  right_routes_v6.py  routes.py
app/clients/: estate_ai_client.py  estate_ai_client_v2.py  estate_ai_client_v3.py  estate_ai_client_v4.py  estate_ai_client_v5.py  estate_ai_client_v6.py  llm_client.py
app/memory/: langgraph_mysql_checkpoint_v3.py  langgraph_mysql_checkpoint_v4.py  langgraph_mysql_checkpoint_v5.py  langgraph_mysql_checkpoint_v6.py  local_memory.py  memory.py  mysql_memory.py  redis_memory.py
app/prompts/: access_agent_system_v1.md  field_extraction_system_v1.md  right_agent_system_v2.md  right_agent_system_v3.md  right_agent_system_v4.md
app/repositories/: agent_state_repository.py
app/schemas/: diagnosis.py  right.py  right_schema.py  right_schema_v2.py  right_schema_v3.py  right_schema_v4.py  right_schema_v5.py  right_schema_v6.py  user_context_schema.py
app/services/: access_diagnosis_agent.py  right_agent.py  right_agent_graph_service.py  right_agent_graph_service_v3.py  right_agent_graph_service_v4.py  right_agent_metadata_v4.py  (+7 more)
tests/: test_access_diagnosis_agent.py  test_right_agent_v2.py  test_right_agent_v3.py  test_right_agent_v4.py  test_right_agent_v5.py  test_right_agent_v6.py
(+7 files in other folders)
